compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__float_empty_exponent.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1801
expression: 1.32e
snapshot_kind: text
---
----- SOURCE CODE
1.32e

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:1
  │
1 │ 1.32e
  │ ^^^^^ This float is missing an exponent

Hint: Add an exponent or remove the trailing `e`
